--- a/impos-web/pom.xml
+++ b/impos-web/pom.xml
@@ -18,6 +18,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.projectKey>varmaun_IM-POS</sonar.projectKey>
+		<sonar.organization>varmaun</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.login>612246d0421a0f63e78d266453777d100d8e24c6</sonar.login>
 	</properties>
 
 	<dependencies>
